@startuml
class Client{
	Integer:id
	String:email
	String:name
}

Client "1" -- "0..*" Project : sponsored_by >

class Project{
	Integer:id
	String:name
	Project: get_all_projects(workspace_id)
	Project: create_new_project(workspace_id,project_name)
}

Project "1" -- "0..*" Membership : refers_to >
Project "1" -- "0..*" Task : task >

class Task{
	Integer:id
	String:name
	String:status
	Integer:estimate
	Task: add_new_task(workspace_id,project_id,task_name,assigneeId)
	Task: get_task_done(workspace_id,project_id)
	Task: get_task_active(workspace_id,project_id)
}

Task "1" -- "0..*" TimeEntry : refers_to >

class Workspace{
	Integer:id
	String:name
	Workspace: get_all_workspaces()
	Workspace: create_new_workspace(name)
}

Workspace "1" -- "0..*" Project : has >
Workspace "1" -- "0..*" User : users >
Workspace "1" -- "0..*" Client : clients >

class TimeEntry{
	DateTime:start_time
	DateTime:end_time
	Boolean:billable
	String:description
	TimeEntry: get_all_time_entry_user(workspace_id,user_id)
}


class User{
	Integer:id
	String:name
	String:email
	User: get_user(id1)
	User: get_all_workspace_users(workspace_id)
	User: add_new_user(workspace_id,email)
}

User "1" -- "0..*" TimeEntry : time_entries >
User "1" -- "0..*" Workspace : workspaces >

class Membership{
	DateTime:hour_rate
	String:member_ship_status
}



@enduml
